src/tests/fixtures/interfaces/TagAttachedToWrongNode.ts.expected
-----------------
INPUT
----------------- 
/** @GQLInterface Person */
function Foo() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/interfaces/TagAttachedToWrongNode.ts:1:5 - error: `@GQLInterface` can only be used on interface declarations.

1 /** @GQLInterface Person */
      ~~~~~~~~~~~~~~~~~~~~~
